# unifi-protect-remux

./: .gitattributes  .gitignore  COMPILING.md  Cargo.toml  Dockerfile  LICENSE.txt  Makefile  README.md  README.txt  docker-compose.yml  go.mod  pom.xml  remux.go  ubvfile_test.go
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: ci.yml  go.yml  release-linux.yml  release-macos-swift.yml  release-macos.yml  release-oldglibc.yml  release-windows.yml  release.yml
assets/: Makefile  appicon.icns  icon-attribution.txt  ubv-document.af
create-ubv/: Cargo.toml  README.md  build.rs
create-ubv/src/: lib.rs  main.rs  reader.rs  writer.rs
create-ubv/tests/: roundtrip.rs
demux/: demux.go
ffmpegutil/: ffmpeg.go
installer/: windows.nsi
reference/: testsrc2.json
remux/: Cargo.toml  build.rs
remux-ffi/: Cargo.toml  build.rs
remux-ffi/src/: lib.rs
remux-gui/: Cargo.toml
remux-gui-cs/RemuxGui/: .gitignore  App.axaml  App.axaml.cs  Icons.axaml  RemuxGui.csproj  ViewLocator.cs  app.manifest
remux-gui-cs/RemuxGui/Converters/: BoolToVisibilityConverter.cs  InverseBoolConverter.cs  StatusColorConverter.cs  ViewIndexConverter.cs
remux-gui-cs/RemuxGui/Interop/: RemuxNative.cs
remux-gui-cs/RemuxGui/Models/: AppJsonContext.cs  CameraData.cs  LogEntry.cs  ProgressEvent.cs  QueuedFile.cs  RemuxConfig.cs  UbvInfo.cs  VersionInfo.cs
remux-gui-cs/RemuxGui/ViewModels/: MainViewModel.cs
remux-gui-cs/RemuxGui/Views/: AboutView.axaml  AboutView.axaml.cs  AboutWindow.axaml  AboutWindow.axaml.cs  CamerasView.axaml  CamerasView.axaml.cs  FilesView.axaml  FilesView.axaml.cs  LogView.axaml  MainWindow.axaml  MainWindow.axaml.cs  SettingsView.axaml  UbvInfoWindow.axaml  UbvInfoWindow.axaml.cs
remux-gui/src/: main.rs  worker.rs
remux-lib/: Cargo.toml
remux-lib/src/: analysis.rs  demux.rs  lib.rs  mp4mux.rs  probe.rs  thumbnail.rs
remux-lib/tests/: e2e_synthetic.rs  reference_testsrc2.rs  reference_testsrc2_av1.rs
remux/src/: analysis.rs  demux.rs  main.rs  mp4mux.rs  probe.rs
samples/: FCECDA1F0A63_0_rotating_1597425468956.ubv  FCECDA1F0A63_0_rotating_1597425468956.ubv.txt
scripts/: amd64-prepare-video-only.sh  build-mac.sh  build-swift.sh  build-win.ps1  create-macos-app.sh  create-test-ubv-round-trip.sh  macos-notarise.sh  prepare-audio-and-video.sh  prepare.sh  remux.sh  smpte-bar-round-trip.sh
src/main/java/: FrameDataRef.java  Remux.java  UbvInfoParser.java  UbvPartition.java
src/main/java/com/peterphi/unifiprotect/remux/: Remux.java
src/main/java/com/peterphi/unifiprotect/ubv/: FrameDataRef.java  TrackType.java  UbvInfoParser.java  UbvPartition.java  UbvTrack.java
src/main/java/com/peterphi/unifiprotect/util/: AbstractCommand.java  FfmpegCommand.java  UbvInfoCommand.java
src/test/java/: UbvInfoParserTest.java
testdata/: README.txt
testdata/essence/: README.txt  testsrc2.ubv  testsrc2_av1.json  testsrc2_av1.ubv
ubv/: Cargo.toml  ubvfile.go  ubvfile_test.go  ubvinfo.go
ubv-anonymise/: Cargo.toml
ubv-anonymise/src/: main.rs
ubv-info/: Cargo.toml  build.rs  info.schema.json
ubv-info/src/: main.rs
ubv/src/: clock.rs  codec.rs  error.rs  format.rs  frame.rs  lib.rs  partition.rs  reader.rs  record.rs  track.rs  version.rs
ubv/tests/: integration.rs  reference_testsrc2.rs  reference_testsrc2_av1.rs
ui/: RemuxGui.sln
ui/RemuxGui/: .gitignore  App.axaml.cs  Program.cs
ui/RemuxGui/Converters/: FileNameConverter.cs  LogFilterActiveConverter.cs  LogLevelColorConverter.cs  StatusColorConverter.cs  StatusForegroundConverter.cs
ui/RemuxGui/Interop/: PlatformHelper.cs  RemuxNative.cs
ui/RemuxGui/Models/: CameraEntry.cs  LicenseEntry.cs  QueuedFile.cs  RemuxConfig.cs  UbvInfo.cs  VersionInfo.cs
ui/RemuxGui/ViewModels/: MainViewModel.cs  ViewModelBase.cs
ui/RemuxGui/Views/: AboutView.axaml  AboutView.axaml.cs  AboutWindow.axaml  AboutWindow.axaml.cs  CamerasView.axaml  CamerasView.axaml.cs  FilesView.axaml  FilesView.axaml.cs  LogView.axaml  LogView.axaml.cs  SettingsView.axaml.cs  UbvInfoWindow.axaml  UbvInfoWindow.axaml.cs
ui/ffi/: Cargo.toml  build.rs  cbindgen.toml
ui/ffi/include/: remux_ffi.h
ui/ffi/src/: lib.rs
ui/installer/: cli-readme.txt  windows.nsi
ui/macos/: .gitignore  Makefile
ui/macos/RemuxGui/: Info.plist
ui/macos/RemuxGui.xcodeproj/: project.pbxproj
ui/macos/RemuxGui/App/: ContentView.swift  RemuxGuiApp.swift
ui/macos/RemuxGui/Assets.xcassets/UBVDocument.imageset/: Contents.json
ui/macos/RemuxGui/FFI/: BridgingHeader.h  RemuxFFI.swift
ui/macos/RemuxGui/Models/: CameraEntry.swift  FileStatus.swift  LicenseEntry.swift  LogEntry.swift  NavigationTab.swift  ProgressEvent.swift  QueuedFile.swift  RemuxConfig.swift  UbvInfoModels.swift
ui/macos/RemuxGui/Utilities/: Color+Theme.swift  SandboxAccess.swift
ui/macos/RemuxGui/ViewModels/: AppViewModel.swift
ui/macos/RemuxGui/Views/About/: AboutView.swift
ui/macos/RemuxGui/Views/Cameras/: CamerasView.swift
ui/macos/RemuxGui/Views/Files/: FileDetailView.swift  FileRowView.swift  FilesView.swift
ui/macos/RemuxGui/Views/Log/: LogRowView.swift  LogView.swift
ui/macos/RemuxGui/Views/Settings/: SettingsView.swift
ui/macos/RemuxGui/Views/Sidebar/: SidebarView.swift
ui/macos/RemuxGui/Views/UbvInfo/: UbvInfoView.swift  UbvInfoWindowController.swift
