[workspace]
members = ["ubv", "ubv-info", "remux", "remux-lib", "remux-ffi", "ubv-anonymise"]
resolver = "2"

[workspace.package]
version = "4.2.0"
edition = "2024"
authors = ["Peter <code@peter.works>"]

[patch.crates-io]
ffmpeg-sys-next = { git = "https://github.com/petergeneric/rust-ffmpeg-sys", branch = "master" }
