[package]
name = "create-ubv"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "Synthesise a .ubv file from a source MP4, for generating test fixtures"

[dependencies]
ubv = { path = "../ubv" }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
ffmpeg-next = "8"
ffmpeg-sys-next = "8"

[features]
default = ["ffmpeg-static"]
ffmpeg-static = ["ffmpeg-next/static", "ffmpeg-next/build", "ffmpeg-sys-next/build-portable"]
