[package]
name = "remux-ffi"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "C FFI bridge for remux-lib"

[lib]
crate-type = ["cdylib"]

[dependencies]
remux-lib = { path = "../remux-lib", default-features = false }
ubv = { path = "../ubv" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
flate2 = "1"
log = "0.4"
ffmpeg-next = "8"

[features]
default = ["ffmpeg-static"]
ffmpeg-static = ["remux-lib/ffmpeg-static"]
