[package]
name = "remux"
version = "4.0.0"
edition = "2024"
license = "AGPL-3.0-only"
authors = ["Peter <code@peter.works>"]
description = "CLI to convert .ubv files to standard MP4"

[dependencies]
ubv = { path = "../ubv" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ffmpeg-next = "8"

[features]
default = ["ffmpeg-static"]
ffmpeg-static = ["ffmpeg-next/static", "ffmpeg-next/build"]
