[package]
name = "remux"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "CLI to convert .ubv files to standard MP4"

[dependencies]
ubv = { path = "../ubv" }
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
log = "0.4"
env_logger = "0.11"
ffmpeg-next = "8"
ffmpeg-sys-next = "8"

[features]
default = ["ffmpeg-static"]
ffmpeg-static = ["ffmpeg-next/static", "ffmpeg-next/build", "ffmpeg-sys-next/build-portable"]
