[package]
name = "remux"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "CLI to convert .ubv files to standard MP4"

[dependencies]
ubv = { path = "../ubv" }
remux-lib = { path = "../remux-lib", default-features = false }
clap = { version = "4", features = ["derive"] }
log = "0.4"
env_logger = "0.11"
glob = "0.3"

[features]
default = ["ffmpeg-static"]
ffmpeg-static = ["remux-lib/ffmpeg-static"]
