[package]
name = "ubv-anonymise"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "CLI to anonymise .ubv files by nulling all AV essence (which also makes them highly compressible for including in unit tests)"

[dependencies]
ubv = { path = "../ubv" }
clap = { version = "4", features = ["derive"] }
