[package]
name = "ubv-info"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "CLI to inspect .ubv file structure"

[dependencies]
ubv = { path = "../ubv", features = ["jsonschema"] }
clap = { version = "4", features = ["derive"] }
libc = "0.2"
serde_json = "1"
schemars = "0.8"
flate2 = "1"
