[package]
name = "ubv"
version.workspace = true
edition.workspace = true
license = "AGPL-3.0-only"
authors.workspace = true
description = "Parser library for Ubiquiti's proprietary .ubv video format"

[features]
jsonschema = ["dep:schemars"]

[dependencies]
thiserror = "2"
flate2 = "1"
serde = { version = "1", features = ["derive"] }
schemars = { version = "0.8", optional = true }

[dev-dependencies]
serde_json = "1"
sha2 = "0.10"
